feat(login): change the image background and color of login/signup page

--- a/front-end/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/front-end/src/app/components/default-login-layout/default-login-layout.component.html
@@ -18,9 +18,9 @@
     </button>
   </section>
   <section class="finance-highlight">
-    <h1><span>Controle </span> suas finanças agora!</h1>
+    <!-- <h1><span>Controle </span> suas finanças agora!</h1> -->
     <img
-      src="assets/images/undraw_online-banking_l9sn.svg"
+      src="assets/images/controll_your_finances.png"
       alt="Finance illustration"
     />
   </section>
