--- a/front-end/src/app/components/default-login-layout/default-login-layout.component.css
+++ b/front-end/src/app/components/default-login-layout/default-login-layout.component.css
@@ -9,7 +9,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #e1eaec 0%, #c6d8db 100%);
+  /* background: linear-gradient(135deg, #e1eaec 0%, #c6d8db 100%); */
+  background-color: #fefefd;
 }
 
 h1 {
@@ -151,48 +152,50 @@ button {
   color: #fff;
 }
 
-span {
+/* span {
   color: #6f97a1;
   font-size: 0.95rem;
   margin: 1rem 0 0.5rem 0;
   display: block;
   text-align: center;
-}
+} */
 
-.finance-highlight {
+/* .finance-highlight {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 2rem;
   padding: 2rem 0;
-}
+} */
 
-.finance-highlight h1 {
+/* .finance-highlight h1 {
   font-size: 2.2rem;
   font-weight: 800;
   color: #263238;
   text-align: center;
   margin-bottom: 1.5rem;
   letter-spacing: 0.01em;
-}
+} */
 
-.finance-highlight h1 span {
+/* .finance-highlight h1 span {
   background: linear-gradient(90deg, #547c86 30%, #6f97a1 100%);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
+} */
 
 .finance-highlight img {
-  width: 500px; /* Aumente conforme desejar */
+  width: 600px; /* Aumente conforme desejar */
   max-width: 95vw;
   margin-top: 0.5rem;
   border-radius: 1rem;
-  box-shadow: 0 4px 16px #33404622;
+  /* box-shadow: 0 4px 16px #33404622; */
   display: block;
-  margin-left: 10rem;
-  margin-right: auto;
-  margin-bottom: 6rem;
+  margin-left: 5rem;
+  margin-right: -5rem;
+  /* margin-right: auto; */
+  margin-bottom: 2rem;
+  /* background-color: #fefefd; */
 }
